feat: adding eureka implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=msvc-inventory
-server.port=8080
+spring.application.name=inventory-service
+server.port=8081
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://mysql-inventory:3306/InventService?createDatabaseIfNotExist=true&serverTimezone=UTC
+#mysql-inventory:3306
+spring.datasource.url=jdbc:mysql://localhost:3306/InventService?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Admin123admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
