--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
