Refactors: Updates package and Dockerfile configurations
This commit refactors the project structure by updating the package names to align with the new `com.github.inncontrol` organization.

It also updates the Dockerfile to use a multi-stage build process with OpenJDK 21 for both building and running the application and ensures correct jar execution.
Additionally the application properties are updated to use environment variables for database configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.3.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com_inncontrol_platform</groupId>
-    <artifactId>inventory-microservices</artifactId>
+    <groupId>com.github.inncontrol</groupId>
+    <artifactId>inventory-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>inventory-microservices</name>
-    <description>inventory-microservices</description>
+    <name>inventory-service</name>
+    <description>inventory-service</description>
     <url/>
     <licenses>
         <license/>
