--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=inventory-service
-server.port=8081
+server.port=${PORT:8081}
 
 # Spring DataSource Configuration
 #mysql-inventory:3306
@@ -18,6 +18,10 @@ springdoc.api-docs.path=/v1/api-docs
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+eureka.instance.instance-id= ${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address= true
+eureka.client.service-url.defaultZone= ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
 
 
 # Elements take their values from the maven pom.xml build-related information
