--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${PORT:8081}
 
 # Spring DataSource Configuration
 #mysql-inventory:3306
-spring.datasource.url=jdbc:mysql://${MYSQL_INVENTORY_HOST:localhost}:${MYSQL_INVENTORY_PORT:3306}/InventService?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_INVENTORY_HOST:mysql-inventory}:${MYSQL_INVENTORY_PORT:3306}/InventService?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=${MYSQL_INVENTORY_USERNAME:root}
 spring.datasource.password=${MYSQL_INVENTORY_PASSWORD:Admin123admin}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
