--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
 # Open API Configuration
-springdoc.api-docs.path=/v1/api-docs
+springdoc.api-docs.path=/api/v1/inventory/docs
 
 #Spring Data JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
